@@ -1,3 +1,4 @@
+- Refactor: Remove StudentCandidacy#ExecutionDegree references [#qubIT-Fenix-6559]
 - Refactor: Remove dependency of StudentCandidacy from StudentActive algorithm [#qubIT-Fenix-6559]
 
 7.24.5 (24-02-2025)
